# en-ai-cli

./: .gitignore  NEXT_SESSION.md  agent.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
docs/: DEVELOPMENT.md  phase1-completion.md  phase2-completion.md  phase3-role-management.md
src/en_ai_cli/: __init__.py  __main__.py  cli.py
src/en_ai_cli/core/: config.py  executor.py  platform.py  session.py
src/en_ai_cli/services/: history.py  llm_provider.py  ollama.py  openrouter.py  provider_manager.py
src/en_ai_cli/ui/: prompts.py  terminal.py
tests/: __init__.py  test_config.py  test_executor.py  test_executor_safety.py  test_history.py  test_ollama.py  test_openrouter.py  test_platform.py  test_provider_manager.py  test_role.py  test_session.py
