[tool.poetry]
name = "en-ai-cli"
version = "0.1.0"
description = "基於 CLI 的 AI 對話環境，支援跨平台指令執行與互動式對話體驗"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "en_ai_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.7.0"
httpx = "^0.27.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
ruff = "^0.1.9"

[tool.poetry.scripts]
en-ai = "en_ai_cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
